--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "canvas-confetti": "^1.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "sonner": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
